tests/golden/error/private_ctor_match/helper.tg
// Private type — its constructors inherit private visibility.

type PrivToken =
    | Secret
    | Open
